# civkit-node

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  check_config.sh  config.toml  example-config.toml
.github/workflows/: ci.yml
ci/ubuntu/: build_civkit-cli.sh  build_civkit-sample.sh  build_civkitd.sh  run.sh  setup_env.sh
doc/: LIGHTNING.md  MAINSTAY.md  MANUAL.md  mainstay.md  nips.md
src/: anchormanager.rs  bitcoind_client.rs  boardmanager.rs  client.rs  clienthandler.rs  config.rs  credentialgateway.rs  events.rs  inclusionproof.rs  kindprocessor.rs  lib.rs  main.rs  mainstay.rs  nodesigner.rs  nostr_db.rs  oniongateway.rs  parser.rs  peerhandler.rs  relay_handler.rs  rpcclient.rs  sample.rs  server.rs  servicemanager.rs  util.rs  verifycommitment.rs  verifycommitment_test.rs
src/proto/: adminctrl.proto  boardctrl.proto  civkitservice.proto
src/services/: marketd.rs  notaryd.rs
