[package]
name = "civkit"
license = "Apache-2.0"
version = "1.0.1"
authors = ["Antoine Riard <dev@ariard.me>"]
description = "A Civ Kit node with Bulletin Board support"
edition = "2021"

[[bin]]
name = "civkitd"
path = "src/server.rs"

[[bin]]
name = "civkit-cli"
path = "src/client.rs"

[[bin]]
name = "civkit-sample"
path = "src/sample.rs"

[[bin]]
name = "civkit-marketd"
path = "src/services/marketd.rs"

[[bin]]
name = "civkit-notaryd"
path = "src/services/notaryd.rs"

[dependencies]
futures-channel = "0.3.28"
futures-util = "0.3.28"
lightning = { git = "https://github.com/civkit/rust-lightning.git", branch = "civkit-branch" }
lightning-net-tokio = { git = "https://github.com/civkit/rust-lightning.git", branch = "civkit-branch" }
lightning-invoice = { git = "https://github.com/civkit/rust-lightning.git", branch = "civkit-branch" }
tokio = { version = "1", features = [ "io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time" ] }
tokio-tungstenite = "0.19.0"
bitcoin = "0.29.0"
bitcoin_hashes = { version = "0.11", default-features = false }
tonic = "0.9"
prost = "0.11"
nostr = { git = "https://github.com/civkit/nostr.git", branch = "civkit-branch" }
url = "2.4.0"
clap = { version = "4.3.8", features = ["derive"] }
serde_json = { version = "1.0" }
toml = "0.5.8"
serde_derive = "1.0"
serde = "1.0.130"
rusqlite = "0.29.0"
simplelog = "0.7.1"
dirs = "3.0.1"
log = "0.4.14"
staking_credentials = { git = "https://github.com/civkit/staking-credentials.git", branch = "main" }
reqwest = "0.11.20"
base64 = "0.21.4"
rs_merkle = "1.4.1"


[build-dependencies]
tonic-build = "0.9"


